* Remove unused colon separated date format (dd:mm:yy) from parsing

* Changelog added