@@ -1,3 +1,12 @@
-* Remove unused colon separated date format (dd:mm:yy) from parsing
+[2 Sep 2007]
 
-* Changelog added
+ * Allow date and time formats like "February 5, 2006" and "September 01, 2007 06:10". [Mark A. Lane]
+
+[7 Jun 07]
+
+ * Datetime restrictions should be parsed as datetimes [Adam Meehan]
+ 
+[Earlier]
+
+ * Remove unused colon separated date format (dd:mm:yy) from parsing
+ 
